--- a/virtualservice.yaml
+++ b/virtualservice.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
   name: frontend
+  namespace: doodlemesh
 spec:
   hosts:
     - draw.kushan23.com
