--- a/Istio/cert.yaml
+++ b/Istio/cert.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: draw-kushan23-cert
-  namespace: default
+  namespace: istio-system
 spec:
   secretName: draw-kushan23-cert-tls
   issuerRef:
