--- a/Istio/clusterIssuer.yaml
+++ b/Istio/clusterIssuer.yaml
@@ -10,5 +10,7 @@ spec:
       name: letsencrypt-prod
     solvers:
       - http01:
-          ingress:
-            class: istio
+          gatewayHTTPRoute:
+            parentRefs:
+              - name: acme-gateway
+                namespace: istio-system
