--- a/Istio/clusterIssuer.yaml
+++ b/Istio/clusterIssuer.yaml
@@ -10,7 +10,5 @@ spec:
       name: letsencrypt-prod
     solvers:
       - http01:
-          gatewayHTTPRoute:
-            parentRefs:
-              - name: acme-gateway
-                namespace: istio-system
+          ingress:
+            class: istio
